Combine steps for apk

--- a/bind/Dockerfile
+++ b/bind/Dockerfile
@@ -1,6 +1,7 @@
 FROM voxxit/base:alpine
 
-RUN apk add --update bind && rm -rf /var/cache/apk/*
+RUN apk add --update bind \
+  && rm -rf /var/cache/apk/*
 
 ADD . /etc/bind/
 
