--- a/grunt/Dockerfile
+++ b/grunt/Dockerfile
@@ -1,7 +1,6 @@
 FROM voxxit/base:alpine
 
-RUN  apk update \
-  && apk add nodejs nodejs-dev git \
+RUN  apk add --update nodejs nodejs-dev git \
   && rm -rf /var/cache/apk/* \
   && npm install -g npm@latest \
   && npm install -g grunt-cli bower
