--- a/rsyslog/Dockerfile
+++ b/rsyslog/Dockerfile
@@ -2,8 +2,7 @@ FROM voxxit/base:alpine
 
 MAINTAINER Joshua Delsman <j (at) srv.im>
 
-RUN  apk update \
-  && apk add rsyslog \
+RUN  apk add --update rsyslog \
   && rm -rf /var/cache/apk/*
 
 EXPOSE 514 514/udp
