update base images to use mirror

--- a/base/debian/Dockerfile
+++ b/base/debian/Dockerfile
@@ -1,9 +1,11 @@
 FROM debian:latest
 
-RUN apt-get update \
+ENV MIRROR="mirrors.ocf.berkeley.edu"
+
+RUN sed -i "s|archive.ubuntu.com|$MIRROR|g" /etc/apt/sources.list \
+  && apt-get update \
   && apt-get -y upgrade \
-  && apt-get -y autoclean \
-  && apt-get -y autoremove \
+  && apt-get -y autoremove --purge \
   && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 COPY ./bin/gosu /usr/local/bin/gosu
