include updated verison of gosu

--- a/nginx-rtmp/Dockerfile
+++ b/nginx-rtmp/Dockerfile
@@ -1,23 +1,26 @@
-FROM alpine
+FROM ubuntu
 
-ARG NGINX_VERSION="1.10.1"
+ARG NGINX_VERSION="1.12.0"
+ENV MIRROR="mirrors.ocf.berkeley.edu"
 
-RUN  apk add --no-cache build-base git pcre-dev openssl-dev \
+RUN  sed -i "s|archive.ubuntu.com|$MIRROR|g" /etc/apt/sources.list \
+  && apt-get update \
+  && apt-get -y install --no-install-recommends wget build-essential libpcre3 libpcre3-dev libssl-dev git-core ca-certificates \
   && mkdir -p /usr/local/src \
   && cd /usr/local/src \
-  && git clone git://github.com/arut/nginx-rtmp-module.git \
+  && git clone https://github.com/sergey-dryabzhinsky/nginx-rtmp-module.git \
   && wget -qO- http://nginx.org/download/nginx-${NGINX_VERSION}.tar.gz | tar -xz \
   && cd nginx-${NGINX_VERSION} \
   && ./configure \
-       --prefix=/usr/local/nginx \
        --with-http_ssl_module \
        --with-debug \
        --add-module=/usr/local/src/nginx-rtmp-module \
-  && make \
+  && make -j`nproc` \
   && make install \
   && cp /usr/local/src/nginx-rtmp-module/stat.xsl /usr/local/nginx/html/ \
-  && apk del build-base git \
-  && rm -rf /usr/local/src/*
+  && apt-get -y remove --purge build-essential git-core wget \
+  && apt-get -y autoremove --purge \
+  && rm -rf /usr/local/src/* /var/lib/apt/lists/*
 
 # Forward request and error logs to Docker log collector
 RUN  ln -sf /dev/stdout /usr/local/nginx/logs/access.log \
