--- a/nginx-rtmp/conf/nginx.conf
+++ b/nginx-rtmp/conf/nginx.conf
@@ -1,45 +1,18 @@
-worker_processes auto;
+worker_processes  auto;
 daemon off;
+rtmp_auto_push on;
 
 events {
-  worker_connections  1024;
+    worker_connections  1024;
 }
 
+# RTMP configuration
 rtmp {
-  server {
-    listen 1935;
+    server {
+        listen 1935; # Listen on standard RTMP port
 
-    application live {
-      live on;
-
-      hls on;
-      hls_path /tmp/hls;
+        application live {
+            live on;
+        }
     }
-  }
-}
-
-http {
-  server {
-    listen 80;
-
-    location /stats {
-      rtmp_stat all;
-      rtmp_stat_stylesheet stat.xsl;
-    }
-
-    location /stat.xsl {
-      root /usr/local/nginx/html;
-    }
-
-    location /hls {
-      types {
-        application/vnd.apple.mpegurl m3u8;
-        video/mp2t ts;
-      }
-
-      root /tmp;
-
-      add_header Cache-Control no-cache;
-    }
-  }
 }
