update to use voxxit/base

--- a/powerdns/Dockerfile
+++ b/powerdns/Dockerfile
@@ -1,12 +1,11 @@
-FROM ubuntu:latest
+FROM voxxit/base:ubuntu
 
 RUN  apt-get update \
-  && DEBIAN_FRONTEND=noninteractive apt-get -y install pdns-server pdns-backend-mysql dnsutils \
+  && apt-get -y install --no-install-recommends pdns-server pdns-backend-mysql dnsutils \
   && rm -rf /var/lib/apt/lists/*
 
 COPY *.conf /etc/powerdns/pdns.d/
 
-EXPOSE 53/tcp 53/udp
-EXPOSE 8081/tcp
+EXPOSE 53/tcp 53/udp 8081/tcp
 
 CMD [ "pdns_server" ]
