--- a/liquidsoap/Dockerfile
+++ b/liquidsoap/Dockerfile
@@ -1,34 +1,34 @@
-FROM voxxit/base:ubuntu
+FROM ubuntu:jammy
 
-MAINTAINER j@srv.im
+LABEL org.opencontainers.image.authors="j@srv.im"
 
-RUN  apt-get -y update \
-  && apt-get -y upgrade \
-  && apt-get -y install mp3gain liquidsoap liquidsoap-plugin-all \
-  && rm -rf /var/lib/apt/lists/*
+ENV LIQUIDSOAP_VERSION="2.2.0"
 
-ENV LOG_NAME  "stream.log"
+COPY install.sh /tmp/install.sh
 
-ENV PLAYLIST_DIR  "/media"
+RUN chmod +x /tmp/install.sh \
+  && /tmp/install.sh "${LIQUIDSOAP_VERSION}" \
+  && rm /tmp/install.sh
 
+ENV LOG_NAME "stream.log"
+ENV PLAYLIST_DIR "/media"
 ENV LIVE_ENDPOINT "/live"
-ENV LIVE_PORT     10000
+ENV LIVE_PORT 10000
 ENV LIVE_PASSWORD "hackme"
 
-ENV STREAM_URL    "http://example.com"
-ENV STREAM_GENRE  "Various"
-ENV STREAM_NAME   "Example Radio"
+ENV STREAM_URL "http://example.com"
+ENV STREAM_GENRE "Various"
+ENV STREAM_NAME "Example Radio"
 
 ENV ICECAST_HOSTNAME "stream.example.com"
-ENV ICECAST_PORT     8000
-ENV ICECAST_PASS     "hackme"
+ENV ICECAST_PORT 8000
+ENV ICECAST_PASS "hackme"
 
 VOLUME [ "/media", "/var/log/liquidsoap" ]
 
 EXPOSE 10000/tcp
 
-COPY start-liquidsoap.sh /usr/bin/start-liquidsoap.sh
-
-USER liquidsoap
+COPY --chown=1001:1001 start-liquidsoap.sh /usr/bin/start-liquidsoap.sh
+USER 1001:1001
 
 ENTRYPOINT [ "/usr/bin/start-liquidsoap.sh" ]
