--- a/grunt/Dockerfile
+++ b/grunt/Dockerfile
@@ -1,4 +1,6 @@
-FROM voxxit/base:alpine
+FROM alpine:3.18
+
+LABEL org.opencontainers.image.authors="j@srv.im"
 
 RUN  apk add --no-cache nodejs nodejs-dev npm git \
   && npm install -g npm@latest \
