--- a/icecast/Dockerfile
+++ b/icecast/Dockerfile
@@ -19,11 +19,11 @@ RUN  addgroup -g 1000 icecast \
   && install -d -o icecast -g icecast /etc/icecast \
   && chown -R icecast:icecast /usr/share/icecast
 
-COPY etc/mime.types /etc/
+COPY --from=src etc/mime.types /etc/
 
 USER icecast:icecast
 
-COPY etc/icecast.xml /etc/icecast/
-COPY docker-entrypoint.sh /
+COPY --from=src etc/icecast.xml /etc/icecast/
+COPY --from=src docker-entrypoint.sh /
 
 CMD [ "/docker-entrypoint.sh" ]
