--- a/powerdns/Dockerfile
+++ b/powerdns/Dockerfile
@@ -6,7 +6,7 @@ RUN  apt-get update \
   && apt-get -y install --no-install-recommends pdns-server pdns-backend-mysql dnsutils \
   && rm -rf /var/lib/apt/lists/*
 
-COPY *.conf /etc/powerdns/pdns.d/
+COPY --from=src *.conf /etc/powerdns/pdns.d/
 
 EXPOSE 53/tcp 53/udp 8081/tcp
 
