--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -9,7 +9,7 @@ VOLUME [ "/etc/nginx" ]
 
 EXPOSE 80/tcp 443/tcp
 
-ADD nginx.conf /etc/nginx/nginx.conf
+COPY --from=src nginx.conf /etc/nginx/nginx.conf
 
 ENTRYPOINT ["nginx"]
 CMD ["-c", "/etc/nginx/nginx.conf"]
