--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,6 +10,7 @@ on:
     branches: [master]
     paths:
       - "**/Dockerfile"
+      - ".github/workflows/docker-build.yml"
   workflow_dispatch:
 
 jobs:
