--- a/rails/5/Dockerfile
+++ b/rails/5/Dockerfile
@@ -1,14 +1,15 @@
-FROM alpine:3.21
+FROM alpine:3.16
 
 RUN apk add --no-cache \
-  bash make nodejs gcc libc-dev git ruby libxml2-dev libxslt-dev \
-  libffi-dev yaml-dev openssl-dev zlib-dev readline-dev \
+  bash make nodejs gcc g++ libc-dev git ruby libxml2-dev libxslt-dev \
+  libffi-dev yaml-dev openssl-dev zlib-dev readline-dev linux-headers \
   && mkdir -p /usr/src/app \
   && git clone https://github.com/postmodern/ruby-install /usr/src/ruby-install \
   && cd /usr/src/ruby-install \
   && make install \
   && ruby-install --system ruby 2.5.9 -- --disable-install-rdoc \
-  && gem install bundler rails -v 5.2.8.1 \
+  --with-openssl-dir=/usr \
+  && gem install 'bundler:1.17.3' 'rails:5.2.8.1' \
   && bundle config --global build.nokogiri --use-system-libraries \
   && apk del ruby \
   && rm -rf /usr/src/*
