--- a/rails/7/Dockerfile
+++ b/rails/7/Dockerfile
@@ -1,14 +1,15 @@
 FROM alpine:3.21
 
 RUN apk add --no-cache \
-  bash make nodejs gcc libc-dev git ruby libxml2-dev libxslt-dev \
-  libffi-dev yaml-dev openssl-dev zlib-dev readline-dev \
+  bash make nodejs gcc g++ libc-dev git ruby libxml2-dev libxslt-dev \
+  libffi-dev yaml-dev openssl-dev zlib-dev readline-dev linux-headers \
   && mkdir -p /usr/src/app \
   && git clone https://github.com/postmodern/ruby-install /usr/src/ruby-install \
   && cd /usr/src/ruby-install \
   && make install \
   && ruby-install --system ruby 3.3.0 -- --disable-install-rdoc \
-  && gem install bundler rails -v 7.2.2.1 \
+  --with-openssl-dir=/usr \
+  && gem install 'bundler:2.5.6' 'rails:7.2.2.1' \
   && bundle config --global build.nokogiri --use-system-libraries \
   && apk del ruby \
   && rm -rf /usr/src/*
